kubernetes/manifest/base/webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
  namespace: model-serving
spec:
  type: NodePort
  selector:
    app: open-webui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
